force-app/main/default/objects/College__c/College__c.object-meta.xml
<CustomObject>
    <description>College Details</description>
    <label>College</label>
    <nameField>
        <label>College Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colleges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>