force-app/main/default/objects/College__c/fields/Accreditation_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Expiry__c</fullName>
    <description>Expiry date and time of certificate</description>
    <label>Accreditation Expiry</label>
    <type>DateTime</type>
</CustomField>