force-app/main/default/objects/College__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Physical address</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>