force-app/main/default/objects/College__c/fields/Annual_Budget__c.field-meta.xml
<CustomField>
    <fullName>Annual_Budget__c</fullName>
    <description>Yearly budget</description>
    <label>Annual Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>