force-app/main/default/objects/College__c/fields/Established_Date__c.field-meta.xml
<CustomField>
    <fullName>Established_Date__c</fullName>
    <description>Year college was founded</description>
    <label>Established Date</label>
    <type>Date</type>
</CustomField>