force-app/main/default/objects/College__c/fields/Is_Government__c.field-meta.xml
<CustomField>
    <fullName>Is_Government__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether college is government-funded</description>
    <label>Is Government</label>
    <type>Checkbox</type>
</CustomField>