force-app/main/default/objects/College__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name of the college</description>
    <inlineHelpText>clg where u studied</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>