force-app/main/default/objects/College__c/fields/Principal_Number__c.field-meta.xml
<CustomField>
    <fullName>Principal_Number__c</fullName>
    <label>Principal Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>