force-app/main/default/objects/College__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Andhra Pradesh, Telangana, Maharashtra, Karnataka,Maharastra, Uttar Pradesh, Madhya Pradesh, Bihar, Rajasthan etc.,</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Andhra Pradesh</fullName>
            </value>
            <value>
                <fullName>Bihar</fullName>
            </value>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>Madhya Pradesh</fullName>
            </value>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Maharastra</fullName>
            </value>
            <value>
                <fullName>Rajasthan</fullName>
            </value>
            <value>
                <fullName>Telangana</fullName>
            </value>
            <value>
                <fullName>Uttar Pradesh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>