force-app/main/default/objects/College__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Clg url</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>